<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user" />

        <EditText
            android:textSize="25dp"
            android:id="@+id/etUsername"
            android:hint="@string/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/pad" />

        <EditText
            android:textSize="25dp"
            android:id="@+id/etPassword"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:textSize="25dp"
        android:text="@string/Login"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:text="@string/Or"
        android:textSize="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnNew"
        android:textSize="25dp"
        android:text="@string/New"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
   </LinearLayout>

</layout>